--- a/src/GifToSpriteMap/GifToSpriteMap.csproj
+++ b/src/GifToSpriteMap/GifToSpriteMap.csproj
@@ -118,7 +118,7 @@
   <ItemGroup>
     <Folder Include="NGif\" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\wraps\openwrap\build\OpenWrap.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>XCOPY /D /Y /R "$(SolutionDir)..\lib\devil.dll"  "$(TargetDir)"
 </PostBuildEvent>
